# mailarch

./: .mcp.json  Cargo.toml  README.md  build.sh  claws-mail-archived  install.sh  mailarch.conf  mailarch.service  mailarch.timer
.github/workflows/: ci.yml
scripts/: lib.sh
src/: config.rs  deferred.rs  imap_client.rs  lock.rs  maildir.rs  main.rs
